; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_bundle.c_bundle_SetLabel.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_bundle.c_bundle_SetLabel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bundle = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bundle_SetLabel(%struct.bundle* %0, i8* %1) #0 {
  %3 = alloca %struct.bundle*, align 8
  %4 = alloca i8*, align 8
  store %struct.bundle* %0, %struct.bundle** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load %struct.bundle*, %struct.bundle** %3, align 8
  %9 = getelementptr inbounds %struct.bundle, %struct.bundle* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @strncpy(i8* %11, i8* %12, i32 7)
  br label %19

14:                                               ; preds = %2
  %15 = load %struct.bundle*, %struct.bundle** %3, align 8
  %16 = getelementptr inbounds %struct.bundle, %struct.bundle* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  store i8 0, i8* %18, align 1
  br label %19

19:                                               ; preds = %14, %7
  ret void
}

declare dso_local i32 @strncpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
